khong sua gi nhieu

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ s<!DOCTYPE html>
 </head>
 <body>
     <div class="apology">
-        <h2>Xin lỗi vì làm em buồn!</h2>
+        <h2>Xin lỗi vì làm em buồn nhiều rồi!</h2>
         <img class="gif" alt="gif" src="https://media.giphy.com/media/2rtQMJvhzOnRe/giphy.gif?cid=ecf05e4707ax4q2l3jkzj1bhhjllqoghmkr7gcib6by4ydct&ep=v1_gifs_search&rid=giphy.gif&ct=g"/>
         <div class="btn-group">
             <button id="agree-btn1">Đồng ý</button>
